--- a/index.ipynb
+++ b/index.ipynb
@@ -103,15 +103,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f211fd7f10>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the SQL database and connect to it\n",
-    "\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('planets.db')\n",
+    "cursor = connection.cursor()\n",
     "# Read in the contents of the create.sql file\n",
-    "\n",
-    "# Execute that SQL against your database\n"
+    "sql = open('create.sql', \"r\").read()\n",
+    "# Execute that SQL against your database\n",
+    "cursor.execute(sql)"
    ]
   },
   {
@@ -130,11 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f211fd7f10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code for reading and executing alter.sql"
+    "# Your code for reading and executing alter.sql\n",
+    "sql2 = open('alter.sql', \"r\").read()\n",
+    "cursor.execute(sql2)"
    ]
   },
   {
@@ -176,11 +203,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f211fd7f10>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to read in the SQL from insert.sql and execute it"
+    "# Your code to read in the SQL from insert.sql and execute it\n",
+    "sql3 = open('insert.sql', \"r\").read()\n",
+    "cursor.execute(sql3)"
    ]
   },
   {
@@ -196,11 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f211fd7f10>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to read in the SQL from update.sql and execute it"
+    "# Your code to read in the SQL from update.sql and execute it\n",
+    "sql4 = open('update.sql', \"r\").read()\n",
+    "cursor.execute(sql4)"
    ]
   },
   {
@@ -219,11 +272,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1f211fd7f10>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to read in the SQL from delete.sql and execute it"
+    "# Your code to read in the SQL from delete.sql and execute it\n",
+    "sql5 = open('delete.sql', \"r\").read()\n",
+    "cursor.execute(sql5)"
    ]
   },
   {
@@ -329,9 +395,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -343,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
